<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding_normal"
    android:orientation="vertical" >
    
    <Spinner
        android:id="@+id/continent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_name_hint"
        android:inputType="textNoSuggestions|textCapWords"/>

    <EditText
        android:id="@+id/main_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_currency_hint"
        android:inputType="textNoSuggestions|textCapWords"/>

    <EditText
        android:id="@+id/secondary_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/secondary_currency"
        android:inputType="textNoSuggestions|textCapWords"/>
    
</LinearLayout>